ci20_android_defconfig: set max value for CONFIG_ARCH_MMAP_RND_BITS
Change-Id: Ib9db737e70528f11bfa1bbee08bed6434135045d
Signed-off-by: Miodrag Dinic <miodrag.dinic@imgtec.com>

--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -46,6 +46,7 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
 # CONFIG_COMPAT_BRK is not set
 CONFIG_PROFILING=y
+CONFIG_ARCH_MMAP_RND_BITS=15
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_MAC_PARTITION=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
