ci20_android_defconfig: Disable CONFIG_MIPS_JZ4780_CPUIDLE
On jz4780_cpuidle_poll_enter function calls there is a chance
to get into a live-lock with TLB load handler.

To avoid kernel hang scenarios which can occur within hours or
even within days, this driver is not used any more.

Change-Id: If472df6d1fe339d18fa2bb68f4fc55dd0438bcff
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -53,6 +53,7 @@ CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_CPU_IDLE=y
+# CONFIG_MIPS_JZ4780_CPUIDLE is not set
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
