--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -272,6 +272,7 @@ config MACH_JZ4780
 	select USE_OF
 	select LIBFDT
 	select SYS_SUPPORTS_SMP
+	select MIPS_EXECUTE_ARM
 
 config LANTIQ
 	bool "Lantiq based platforms"
@@ -2707,6 +2708,10 @@ config BINFMT_ELF32
 	default y if MIPS32_O32 || MIPS32_N32
 
 endmenu
+
+config MIPS_EXECUTE_ARM
+        bool "Kernel support for Magic Code"
+        default n
 
 menu "Power management options"
 
