--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -258,6 +258,8 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_VT is not set
 CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 CONFIG_LEGACY_PTY_COUNT=16
+# CONFIG_DEVMEM is not set
+# CONFIG_DEVKMEM is not set
 CONFIG_SERIAL_JZ47XX_UART=y
 CONFIG_SERIAL_JZ47XX_CONSOLE=y
 CONFIG_SERIAL_JZ47XX_UART0=y
