--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -387,6 +387,7 @@ CONFIG_USB_HCD_TEST_MODE=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC2=y
 CONFIG_USB_DWC2_PLATFORM=y
+CONFIG_USB_DWC2_DISABLE_VOD=y
 CONFIG_USB_OTG_WAKELOCK=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_CONFIGFS=y
