--- a/arch/mips/boot/dts/jz4780.dtsi
+++ b/arch/mips/boot/dts/jz4780.dtsi
@@ -772,6 +772,7 @@
 
 			phys = <&usb_phy>;
 			phy-names = "usb2-phy";
+			g-rx-fifo-size = <256>;
 			g-tx-fifo-size = <256 256 256 256>;
 		};
 		vpu: jz4780-vpuk@0x13200000 {
