ci20_android_defconfig: Enable F2FS filesystem support
Change-Id: I081f9dd5fe75cf78fee9102377c36f4d99c36e17
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -446,6 +446,8 @@ CONFIG_UBIFS_FS_ADVANCED_COMPR=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_FS_SECURITY=y
 CONFIG_NFS_FS=y
 CONFIG_NFS_V3_ACL=y
 CONFIG_NFS_V4=y
