ci20_android_defconfig: Update various configs
Adjust configuration according to android/configs/android-base.cfg

Change-Id: I331a1c1e8fa8cfe05601f3513b7125707cb00582
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/Kconfig
+++ b/arch/mips/Kconfig
@@ -275,6 +275,7 @@ config MACH_JZ4780
 	select LIBFDT
 	select SYS_SUPPORTS_SMP
 	select MIPS_EXECUTE_ARM
+	select HAVE_ARCH_HARDENED_USERCOPY
 
 config LANTIQ
 	bool "Lantiq based platforms"
