ci20_android_defconfig: Enable ZRAM
Change-Id: I7dfa1a9ddf877cf03883ca8aec5d9d3be851589c
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -3,6 +3,7 @@ CONFIG_XBURST_CACHE=y
 CONFIG_HIGHMEM=y
 CONFIG_KSM=y
 CONFIG_CMA=y
+CONFIG_ZSMALLOC=y
 CONFIG_SMP=y
 CONFIG_NR_CPUS=2
 CONFIG_HZ_100=y
@@ -202,6 +203,8 @@ CONFIG_MTD_NAND=y
 CONFIG_MTD_NAND_JZ4780=y
 CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_FASTMAP=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_SIZE=8192
