--- a/arch/mips/configs/ci20_android_defconfig
+++ b/arch/mips/configs/ci20_android_defconfig
@@ -428,7 +428,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ION=y
 CONFIG_POWERVR_SGX_SYSTRACE=y
-CONFIG_POWERVR_CI20=y
+CONFIG_POWERVR_JZ4780=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_MEMORY=y
 CONFIG_PHY_JZ4780_USB=y
