--- a/drivers/staging/imgtec/pvr_jz4780/Makefile
+++ b/drivers/staging/imgtec/pvr_jz4780/Makefile
@@ -1,5 +1,5 @@
-obj-$(CONFIG_POWERVR_CI20) += ci20.o
-ci20-y += sysconfig.o sysutils.o
+obj-$(CONFIG_POWERVR_JZ4780) += jz4780.o
+jz4780-y += sysconfig.o sysutils.o
 ccflags-y += -include $(srctree)/drivers/staging/imgtec/config_kernel.h \
  -I$(src) \
  -I$(srctree)/drivers/staging/imgtec \
