--- a/arch/mips/configs/npm801_android_defconfig
+++ b/arch/mips/configs/npm801_android_defconfig
@@ -300,7 +300,8 @@ CONFIG_SOC_CAMERA_OV5640=y
 CONFIG_DRM=y
 CONFIG_DRM_JZ4780=y
 CONFIG_DRM_JZ4780_HDMI_AUDIO=y
-# CONFIG_LCD_CLASS_DEVICE is not set
+CONFIG_LCD_CLASS_DEVICE=y
+CONFIG_LCD_CRD080TI01_40NM01=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
