jz4780: drm: Introduce JZ4780 LCD support
Introduce support for configuring LCD panel to work
in parallel with the existing HDMI.

Change-Id: I9bd8d944ac6c7ee3bb94612a7fc01f569737c71d
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/drivers/gpu/drm/jz4780/Kconfig
+++ b/drivers/gpu/drm/jz4780/Kconfig
@@ -18,4 +18,10 @@ config DRM_JZ4780_HDMI_AUDIO
 	select CI20_HDMI_AUDIO
 	help
 	  Choose this option to enable support for audio over HDMI
-	
+
+config DRM_JZ4780_LCD
+	bool "Support for Ingenic JZ4780 LCD"
+	depends on DRM_JZ4780
+	help
+	  Choose this option to enable LCD support
+
