--- a/arch/mips/boot/dts/jz4780.dtsi
+++ b/arch/mips/boot/dts/jz4780.dtsi
@@ -609,9 +609,10 @@
 		ranges = <>;
 
 
-		lcd: jz4780-lcdk@0x13050000 {
+		lcd: jz4780-lcdk@0x130X0000 {
 			compatible = "ingenic,jz4780-lcd";
-			reg = <0x13050000 0x1800>;
+			reg = <	0x13050000 0x1800	/* LCDC0 */
+				0x130a0000 0x1800>;	/* LCDC1 */
 
 			clocks = <&cgu JZ4780_CLK_TVE>, <&cgu JZ4780_CLK_LCD0PIXCLK>;
 			clock-names = "lcd_clk", "lcd_pixclk";
