npm801: npm801_android_defconfig: Enable JZ4780 LCD support
Enable CONFIG_DRM_JZ4780_LCD.
Configure device tree parameters.

Change-Id: I28b282c411a093b538c69b8b60a4b9d9e91afc54
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/boot/dts/npm801.dts
+++ b/arch/mips/boot/dts/npm801.dts
@@ -134,6 +134,14 @@
 	clock-frequency = <48000000>;
 };
 
+&lcd {
+	max-width = <1024>;
+	max-height = <768>;
+
+	clocks = <&cgu JZ4780_CLK_TVE>, <&cgu JZ4780_CLK_LCD0PIXCLK>, <&cgu JZ4780_CLK_LCD>, <&cgu JZ4780_CLK_LCD1PIXCLK>;
+	clock-names = "lcd_clk", "lcd_pixclk", "lcd1_clk", "lcd1_pixclk";
+};
+
 &msc0 {
 	bus-width = <4>;
 	max-frequency = <50000000>;
