npm801: Use proper wifi regulator gpio
Change-Id: Ia446e9c1851656f6cc6b1fc823bb8575b929b095
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/boot/dts/npm801.dts
+++ b/arch/mips/boot/dts/npm801.dts
@@ -41,7 +41,7 @@
 	wifi_power: fixedregulator@1 {
 		compatible = "regulator-fixed";
 		regulator-name = "wifi_power_gpio";
-		gpio = <&gpb 19 0>;
+		gpio = <&gpd 8 0>;
 		enable-active-high;
 
 		regulator-min-microvolt = <3300000>;
