npm801: Configure all gpio-keys
Provide configuration for back button, volume down button and
volume up button.
Reconfigure power button to active low.

Change-Id: Ia97f8fe5dbd16c9fc8531f37f6c041b852a1e11a
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/boot/dts/npm801.dts
+++ b/arch/mips/boot/dts/npm801.dts
@@ -126,11 +126,29 @@
 	gpio-keys {
 		compatible = "gpio-keys";
 
-		power {
+		back_button {
+			label = "Back Button";
+			gpios = <&gpb  5 GPIO_ACTIVE_LOW>;
+			linux,code = <KEY_BACK>;
+		};
+
+		power_button {
 			label = "Power Button";
-			gpios = <&gpa  30 0>;
+			gpios = <&gpa  30 GPIO_ACTIVE_LOW>;
 			linux,code = <KEY_POWER>;
 			gpio-key,wakeup;
+		};
+
+		volume_down_button {
+			label = "Volume Down Button";
+			gpios = <&gpd  18 GPIO_ACTIVE_LOW>;
+			linux,code = <KEY_VOLUMEDOWN>;
+		};
+
+		volume_up_button {
+			label = "Volume Up Button";
+			gpios = <&gpd  17 0>;
+			linux,code = <KEY_VOLUMEUP>;
 		};
 	};
 
