jz4780_battery: Introduce JZ4780 battery driver support
This driver has been ported from 3.0.8 kernel and
device tree support has been enabled.

JZ4740 and JZ4780 battery device tree support has been
enabled in JZ4740 ADC driver.

Change-Id: I4e5902578a7d895feaf4af3dddf01c0a5dbe7dc4
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -254,6 +254,14 @@ config BATTERY_JZ4740
 	  This driver can be build as a module. If so, the module will be
 	  called jz4740-battery.
 
+config BATTERY_JZ4780
+	tristate "Ingenic JZ4780 battery"
+	depends on MACH_JZ4780
+	depends on MFD_JZ4740_ADC
+	help
+	  Say Y to enable support for the battery on Ingenic JZ4780 based
+	  boards.
+
 config BATTERY_INTEL_MID
 	tristate "Battery driver for Intel MID platforms"
 	depends on INTEL_SCU_IPC && SPI
