--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -258,9 +258,17 @@ config BATTERY_JZ4780
 	tristate "Ingenic JZ4780 battery"
 	depends on MACH_JZ4780
 	depends on MFD_JZ4740_ADC
+	select CHARGER_AC_JZ4780
 	help
 	  Say Y to enable support for the battery on Ingenic JZ4780 based
 	  boards.
+
+config CHARGER_AC_JZ4780
+	tristate "Ingenic JZ4780 AC charger"
+	depends on BATTERY_JZ4780
+	depends on GPIOLIB
+	help
+	  JZ4780 driver is used in combination with JZ4780 battery driver
 
 config BATTERY_INTEL_MID
 	tristate "Battery driver for Intel MID platforms"
