npm801: npm801_android_defconfig: Enable JZ4780 battery driver
Enable CONFIG_BATTERY_JZ4780.
Configuration dependancy also enables CONFIG_CHARGER_AC_JZ4780.
Configure device tree parameters.

Change-Id: I9ee8176d99d985925bbb3ac2aef44e45ade10737
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/boot/dts/jz4780.dtsi
+++ b/arch/mips/boot/dts/jz4780.dtsi
@@ -588,7 +588,7 @@
 			};
 		};
 
-		adc@0x10070000 {
+		adc: adc@0x10070000 {
 			compatible = "ingenic,jz4780-adc";
 			reg = <0x10070000 0x30>;
 
