--- a/arch/mips/configs/npm801_android_defconfig
+++ b/arch/mips/configs/npm801_android_defconfig
@@ -274,6 +274,7 @@ CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
+CONFIG_BATTERY_JZ4780=y
 CONFIG_SENSORS_JZ4740=y
 CONFIG_WATCHDOG=y
 CONFIG_JZ4740_WDT=y
