npm801: npm801_android_defconfig: Enable JZ4780 EHCI driver
This fixes the issue with adb not being functional
after the device has been rebooted.

Change-Id: Id2feaf7e7f566582f9edb095ad5362b71db314b3
Signed-off-by: Dragan Cecavac <dragan.cecavac@imgtec.com>

--- a/arch/mips/boot/dts/npm801.dts
+++ b/arch/mips/boot/dts/npm801.dts
@@ -170,6 +170,10 @@
 	vmmc-supply = <&wifi_power>;
 };
 
+&ehci {
+	ingenic,vbus-gpio = <&gpf 15 0>;
+};
+
 &uart0 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pins_uart0_data>;
