--- a/arch/mips/configs/npm801_android_defconfig
+++ b/arch/mips/configs/npm801_android_defconfig
@@ -371,6 +371,8 @@ CONFIG_HID_ZYDACRON=y
 CONFIG_HID_PID=y
 CONFIG_USB_HIDDEV=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_JZ4780=y
 CONFIG_USB_HCD_TEST_MODE=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC2=y
