--- a/arch/mips/configs/npm801_android_defconfig
+++ b/arch/mips/configs/npm801_android_defconfig
@@ -412,6 +412,8 @@ CONFIG_POWERVR_SGX_SYSTRACE=y
 CONFIG_POWERVR_JZ4780=y
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_MEMORY=y
+CONFIG_IIO=y
+CONFIG_JZ4780_MMA8452=y
 CONFIG_PHY_JZ4780_USB=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
